Revision history for perl distribution Mojolicious-Plugin-Pager

0.04 Not Released
 - Can construct pager from stash values
 - Can return pages as an array-ref. Useful for template systems, such as TT

0.03 2017-06-18T03:27:05+0200
 - Fix custom pager text

0.02 2017-06-01T22:48:06+0200
 - Fix missing dependencies

0.01 2017-06-01T22:18:07+0200
 - Add pager_link() and pages_for() helpers