@@ -3,6 +3,7 @@ Revision history for perl distribution Mojolicious-Plugin-Pager
 0.04 Not Released
  - Can construct pager from stash values
  - Can return pages as an array-ref. Useful for template systems, such as TT
+ - Add option for always showing prev/next buttons
 
 0.03 2017-06-18T03:27:05+0200
  - Fix custom pager text
